Worked on changing user model added user password, imported library BCrypt for password hashing, searched about database migrations(evolutions) for easier database management, need to find more about this to enable migrations because different versions of play use different approach, still doing this manually. Enabled jwt token generation and authentication for securing api endpoints, need to improve this more.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -344,6 +344,7 @@ db {
     password = "postgres"
   }
   numThreads = 10
+  max_connections = 50
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
   #default.driver = org.h2.Driver
@@ -354,6 +355,20 @@ db {
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
+}
+
+slick.dbs.default.driver="slick.driver.PostgresDriver$"
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/finder"
+slick.dbs.default.db.user="postgres"
+slick.dbs.default.db.password="postgres"
+
+# Jwt token informations
+
+jwt {
+  secretKey = "skoes22323!2323okdsokdoksao23232sdasd222@"
+  algorithm = "HS256",
+  type = "bearer"
 }
 
 # API prefix to be used for all API routes
