Worked on fixing some bugs with path of template creation, improved http src to update view with new image on image upload, added Not specified to certificate if user didn't input data to some field.Improved short description of course on home page, now it works always and shortens the description. Improved delete certificate to reflect changes in way certificate is generated and deleted.Changed search course by date to search by start Date not date course was created.Added back password strenght progress bar so user can know how strong his password in % is.Worked on quiz creation so user can create quiz, questions and question answers dynamically, later user will be asked to complete quiz on course book.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -333,7 +333,7 @@ play.db {
 # EBean: https://playframework.com/documentation/latest/JavaEbean
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
 #
-db {
+database {
   # You can declare as many datasources as you want.
   # By convention, the default datasource is named `default`
 
@@ -343,7 +343,7 @@ db {
     user = "postgres"
     password = "postgres"
   }
-  numThreads = 10
+  numThreads = 15
   max_connections = 50
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
@@ -357,18 +357,12 @@ db {
   #default.logSql=true
 }
 
-slick.dbs.default.driver="slick.driver.PostgresDriver$"
-slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url="jdbc:postgresql://localhost:5432/finder"
-slick.dbs.default.db.user="postgres"
-slick.dbs.default.db.password="postgres"
-
 # Jwt token informations
 
 jwt {
   secretKey = "skoes22323!2323okdsokdoksao23232sdasd222@"
   algorithm = "HS256",
-  type = "bearer"
+  schema = "bearer"
 }
 
 # API prefix to be used for all API routes
