--- a/conf/application.conf
+++ b/conf/application.conf
@@ -296,7 +296,7 @@ libraryDependencies += evolutions
 #
 play.evolutions {
   # You can disable evolutions for a specific datasource if necessary
-  #db.default.enabled = false
+  db.default.enabled = true
 }
 
 ## Database Connection Pool
