Changed model to make email and username unique fields, added boolean field in Postgres to be able to map to Scala Boolean with Slick. Added some methods to save user details when user is saved and to be able to update userDetails later on API. Changed connection url and parameters for database.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -333,10 +333,30 @@ play.db {
 # EBean: https://playframework.com/documentation/latest/JavaEbean
 # Anorm: https://www.playframework.com/documentation/latest/ScalaAnorm
 #
-database {
+databaseUrl {
   # You can declare as many datasources as you want.
   # By convention, the default datasource is named `default`
 
+  dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
+  properties = {
+    #url = "jdbc:postgresql://localhost:5432/finder"
+    #databaseName = "finder"
+    #user = "postgres"
+    #password = "postgres"
+    driver = "org.postgresql.Driver"
+    url = "postgres://postgres:postgres@localhost:5432/finder"
+  }
+  numThreads = 10
+  # max_connections = 5
+  # connectionPool = disabled
+  # keepAliveConnection = true
+
+  # You can turn on SQL logging for any datasource
+  # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
+  default.logSql=true
+}
+
+pgDb {
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
     url = "jdbc:postgresql://localhost:5432/finder"
@@ -344,21 +364,9 @@ database {
     password = "postgres"
   }
   numThreads = 10
-  max_connections = 5
-
-  # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  #default.driver = org.h2.Driver
-  #default.url = "jdbc:h2:mem:play"
-  #default.username = sa
-  #default.password = ""
-
-  # You can turn on SQL logging for any datasource
-  # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
-  #default.logSql=true
 }
 
 # Jwt token informations
-
 jwt {
   secretKey = "skoes22323!2323okdsokdoksao23232sdasd222@"
   algorithm = "HS256",
