Worked on exploring joins in slick, changed models to add userDetails on user model when returning user via API, mapped details on get by id and get all users, fixed update on user repository to update all columns except primary and foreign keys, updated interfaces, had problem with write of JSON because when writing explicit JSON write and read order of models is important for JSON to be able to cast it.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -346,9 +346,9 @@ databaseUrl {
     driver = "org.postgresql.Driver"
     url = "postgres://postgres:postgres@localhost:5432/finder"
   }
-  numThreads = 10
+  # numThreads = 10
   # max_connections = 5
-  # connectionPool = disabled
+  connectionPool = disabled
   # keepAliveConnection = true
 
   # You can turn on SQL logging for any datasource
