Worked on trying to implement many to many creation and query for project and skills.Added new routes for project and skills, for deletion, posting skills related to project. Most time spent on many to many query because documentation is bad on slick website and no much answers on other sites. Changed num of threads and max connection because I had problems with connection timeout on connection pool.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -346,9 +346,9 @@ databaseUrl {
     driver = "org.postgresql.Driver"
     url = "postgres://postgres:postgres@localhost:5432/finder"
   }
-  # numThreads = 10
+  numThreads = 10
   # max_connections = 5
-  connectionPool = disabled
+  # connectionPool = disabled
   # keepAliveConnection = true
 
   # You can turn on SQL logging for any datasource
@@ -356,14 +356,15 @@ databaseUrl {
   default.logSql=true
 }
 
-pgDb {
+postgresDatabase {
   dataSourceClass = "org.postgresql.ds.PGSimpleDataSource"
   properties = {
-    url = "jdbc:postgresql://localhost:5432/finder"
+    databaseName = "finder"
     user = "postgres"
     password = "postgres"
   }
-  numThreads = 10
+  numThreads = 100
+  max_connections = 100
 }
 
 # Jwt token informations
