Added vacation and user_vacation sql database creation queries.Added skills for get by id and get on project service, spent time fixing mapping query to get on project and sequence of skills related to that project.Started adding vacation dal model, repository, service and controller so vacation can be added and user mapped to vacation.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -339,16 +339,10 @@ databaseUrl {
 
   dataSourceClass = "slick.jdbc.DatabaseUrlDataSource"
   properties = {
-    #url = "jdbc:postgresql://localhost:5432/finder"
-    #databaseName = "finder"
-    #user = "postgres"
-    #password = "postgres"
     driver = "org.postgresql.Driver"
     url = "postgres://postgres:postgres@localhost:5432/finder"
   }
-  numThreads = 10
-  # max_connections = 5
-  # connectionPool = disabled
+  connectionPool = disabled
   # keepAliveConnection = true
 
   # You can turn on SQL logging for any datasource
@@ -364,7 +358,7 @@ postgresDatabase {
     password = "postgres"
   }
   numThreads = 100
-  max_connections = 100
+  # max_connections = 100
 }
 
 # Jwt token informations
