Worked on user interesting info model in database and service.Added leave category that describes type of leave that user can take, made repository, service and controllers for basic CRUD operations on that model, worked on connecting leave with leave category to display to user.Connected skills and leaves with users to be abel to return them in api.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -357,8 +357,9 @@ postgresDatabase {
     user = "postgres"
     password = "postgres"
   }
-  numThreads = 100
-  # max_connections = 100
+  numThreads = 5
+  dbplugin = disabled
+  # max_connections = 25
 }
 
 # Jwt token informations
