Worked on addding error view on react front-end with routes 404 and 500, added role and user role repository and trait for operations on roles and connection between user and role, to be able to make authorization possible, with specific roles assigned to users. Added startup singleton in which those roles will be instantiated from application configuration file and will check if there are new roles in configuration to add them on application start. Started working on leave request page so user can add date and description of leave he wants to request. Added base employee role when user is created.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -368,5 +368,7 @@ jwt {
   schema = "bearer"
 }
 
+roles = ["Employee", "Admin", "Owner", "Contractor"]
+
 # API prefix to be used for all API routes
 apiPrefix = "api"
