--- a/ui/package.json
+++ b/ui/package.json
@@ -10,13 +10,14 @@
   },
   "proxy": "http://localhost:9000",
   "dependencies": {
+    "antd": "^3.5.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
   "devDependencies": {
     "ncp": "^2.0.0",
-    "react-router-dom": "^4.2.2",
     "rimraf": "^2.6.2"
   }
 }
